
https://github.com/olikraus/u8g2 ChangeLog


2016-04-30	v2.0.1  	olikraus@gmail.com
  * Support for DOGS102, ST7920, SSD1306
  * Most graphics primitives are implemented
2016-05-15	v2.0.3 	olikraus@gmail.com
  * Support for Adafruit FeatherWing 128x32 OLED
  * Added Wire.h support (I2C for SSD1306)
  * Successfully tested with Adafruit ESP8266 Feather Board (HW+SW I2C)
  * Successfully tested with Adafruit Feather M0 Basic Board (HW+SW I2C)
2016-06-12	v2.0.4 	olikraus@gmail.com
  * Support for ST7565
2016-06-25	v2.0.6 	olikraus@gmail.com
  * User interface functions
  * Little Rook Chess ported
  * ST7920 HW and SW SPI
2016-06-26	v2.0.7	  olikraus@gmail.com
  * drawLine
  * GraphicsTest Example
2016-08-09	v2.1.5	  olikraus@gmail.com
  * T6963 Support
  * Experimental Support for SSD1322 256x64
  * A2 Thermoprinter Support
  * Added several fonts from http://int10h.org/oldschool-pc-fonts/
  * Added Arabic, Greek and Cyrillic fonts.
  * Code cleanup (assert, spi modes, void * warning)
2016-xx-xx	v2.2.x	  olikraus@gmail.com
  * U8x8: Upscale by 2 (Issue 41)
  * Fixed SSD1306 I2C procedures (mirror pixel in last tile column, issue 44)
  
  