@@ -1,2 +1,2 @@
 # without 'v' prefix
-echo -n "2.2.5"
+echo -n "2.2.6"
